POST Cuenta Bancaria hecho

--- a/apps/templates/home/forms-trabajador1.html
+++ b/apps/templates/home/forms-trabajador1.html
@@ -211,18 +211,21 @@
                       <input type="file" class="form-control" id="trabajador_path_doc_estado_civil" name="trabajador_path_doc_estado_civil">
                   </div>
                   -->
-                </div>  
-                <!-- Fecha de Ingreso al Sistema -->
-                <div class="form-group">
+                </div> 
+                <div class="form-row">
+                  <!-- Fecha de Ingreso al Sistema -->
+                  <div class="form-group col-md-6">
                     <label for="trabajador_fecha_ingreso_sistema">Fecha de Ingreso al Sistema:</label>
                     <input type="date" class="form-control" id="trabajador_fecha_ingreso_sistema" name="trabajador_fecha_ingreso_sistema" required>
-                </div>
-            
-                <!-- Fecha de Ingreso -->
-                <div class="form-group">
+                  </div>
+
+                  <!-- Fecha de Ingreso -->
+                  <div class="form-group col-md-6">
                     <label for="trabajador_fecha_ingreso">Fecha de Ingreso:</label>
                     <input type="date" class="form-control" id="trabajador_fecha_ingreso" name="trabajador_fecha_ingreso" required>
-                </div>
+                  </div>
+                </div> 
+                
 
                 <!-- Experiencia Previa -->
                 <div class="form-group">
@@ -402,7 +405,7 @@
             
                 <!-- Botón de Envío -->
                 <button type="button" class="btn btn-primary" onclick="submitCuentaBancariaForm()">Enviar Datos</button>
-            </form>
+              </form>
             
             </div>
           </div>
@@ -704,10 +707,9 @@
   <script src="/static/assets/plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap 4 -->
   <script src="/static/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <!-- pace-progress -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <!-- pace-progress -->
   <script src="/static/assets/plugins/pace-progress/pace.min.js"></script>
   <!-- AdminLTE App -->
   <script src="/static/assets/js/adminlte.min.js"></script>
@@ -719,8 +721,8 @@
   <script src="/static/assets/js/forms/form01.js"></script>
   
   <script src="/static/assets/js/forms/form02.js"></script>
-  <script src="/static/assets/js/forms/form03.js"></script><!--
-  <script src="/static/assets/js/forms/form04.js"></script>
+  <script src="/static/assets/js/forms/form03.js"></script>
+  <script src="/static/assets/js/forms/form04.js"></script><!--
   <script src="/static/assets/js/forms/form05.js"></script>
   <script src="/static/assets/js/forms/form06.js"></script>
   <script src="/static/assets/js/forms/form07.js"></script> -->
