POST estudio hecho

--- a/apps/templates/home/forms-trabajador1.html
+++ b/apps/templates/home/forms-trabajador1.html
@@ -661,9 +661,6 @@
                   </div>
                 </div>
                 
-            
-                
-            
                 <!-- Botón de Envío -->
                 <button type="button" class="btn btn-primary" onclick="submitEstudioForm()">Enviar Datos</button>
               </form>
@@ -724,6 +721,6 @@
   <script src="/static/assets/js/forms/form03.js"></script>
   <script src="/static/assets/js/forms/form04.js"></script>
   <script src="/static/assets/js/forms/form05.js"></script>
-  <script src="/static/assets/js/forms/form06.js"></script><!--
-  <script src="/static/assets/js/forms/form07.js"></script> -->
+  <script src="/static/assets/js/forms/form06.js"></script>
+  <script src="/static/assets/js/forms/form07.js"></script>
 {% endblock javascripts %}
