Elimino tablas de gráficos

--- a/apps/templates/home/graph-my_graphics.html
+++ b/apps/templates/home/graph-my_graphics.html
@@ -27,6 +27,9 @@
       height: auto !important;
   }
 </style>
+<!-- Agrega esto en la sección head de tu HTML -->
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+
 {% endblock stylesheets %} {% block content %}
 
 <div class="content-wrapper" id="pdfContent">
@@ -372,6 +375,7 @@
   <script src="/static/assets/js/adminlte.min.js"></script>
   <!-- AdminLTE for demo purposes -->
   <script src="/static/assets/js/demo.js"></script>
+  
   <!-- Mi script apiUtils.js -->
   <script src="/static/assets/js/graphic/date.js"></script>
   <script src="/static/assets/js/index/apiUtils.js"></script>
