--- a/apps/templates/home/forms-trabajador.html
+++ b/apps/templates/home/forms-trabajador.html
@@ -142,7 +142,7 @@
             </div>
             <div class="card-body">
               <!-- Your form for the second column goes here -->
-              <form id="trabajadorForm">
+              <form id="trabajadorForm" enctype="multipart/form-data">
                 <!-- Usuario Relacionado -->
                 <div class="form-group">
                   <label for="usuario_relacionado">Usuario Relacionado(Nmro DNI):</label>
@@ -158,12 +158,12 @@
                           <!-- Agrega más opciones según sea necesario -->
                       </select>
                   </div>
-                  <!--
+                  
                   <div class="form-group col-md-6">
                       <label for="trabajador_path_documento">Archivo de Identidad:</label>
                       <input type="file" class="form-control" id="trabajador_path_documento" name="trabajador_path_documento">
                   </div>
-                  -->
+                  
                 </div>
             
                 <!-- Fecha de Nacimiento -->
@@ -205,12 +205,12 @@
                           <option value="No Especificado">No Especificado</option>
                       </select>
                   </div>
-                  <!--
+                  
                   <div class="form-group col-md-6">
                       <label for="trabajador_path_doc_estado_civil">Archivo de Estado Civil:</label>
                       <input type="file" class="form-control" id="trabajador_path_doc_estado_civil" name="trabajador_path_doc_estado_civil">
                   </div>
-                  -->
+                  
                 </div> 
                 <div class="form-row">
                   <!-- Fecha de Ingreso al Sistema -->
